A008 - 0178 parallell sessions GUI exposure and github tools
